working on website at school

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <h2> At the moment im soring out motor controllers and connecting my xbox controller</h2>
 <h1>How im doing it</h1>
 <br>
-<h2>Im using a libary called bluepad32 </h2>
+<h2>Im using a libary called bluepad32 this allows me to connect a controller (i.e. xbox or playstation or a long list of others) and use that to set variables and control motors</h2>
+<h2>along with this im going to make the entire thing opensource from code to desighn files</h2>
 <br>
 <h1>Links and sources</h1>
-<a href="">link text</a>
+<a href="https://github.com/Deeppy1/Drone/tree/main">The GitHub prodgect</a>
+<a href="https://github.com/ricardoquesada/bluepad32">The Bluepad32 libary</a>
