fixed text size

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 body {
   font-family: Arial, sans-serif;
 }
+h1 {
+  font-size: 30px;
+}
+
+h2 {
+  font-size: 20px;
+}
 </style>
 </head>
 <body>
@@ -12,15 +19,14 @@ body {
 <h1>3d Printed Drone Project</h1>
 <br>
 <h2>I'm currently attempting to create and 3d print a drone using an Esp32 and some old motors I had lying around </h2>
-<h2> At the moment I'm soring out motor controllers and connecting my xbox controller</h2>
-<h1>How I'm doing it</h1>
+<h2> At the moment I'm soring out motor controllers and connecting my Xbox controller</h2>
 <br>
+<h1>How I'm doing it</h1>
 <h2>I'm using a libary called bluepad32 this allows me to connect a controller (i.e. xbox or playstation or a long list of others) and use that to set variables and control motors</h2>
 <h2>along with this I'm going to make the entire thing opensource from code to desighn files</h2>
 <br>
 <h1>Links and sources</h1>
 <h2><a href="https://github.com/Deeppy1/Drone/tree/main">The GitHub prodgect</a></h2>
-<br>
 <h2><a href="https://github.com/ricardoquesada/bluepad32">The Bluepad32 libary</a></h2>
 
 </body>
