--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@ h1 {
 h2 {
   font-size: 20px;
 }
+/* Default (light mode) */
+body {
+    background-color: white;
+    color: black;
+}
+
+/* Dark mode */
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: black;
+        color: white;
+    }
+}
+
 </style>
 </head>
 <body>
@@ -19,11 +33,11 @@ h2 {
 <h1>3d Printed Drone Project</h1>
 <br>
 <h2>I'm currently attempting to create and 3d print a drone using an Esp32 and some old motors I had lying around </h2>
-<h2> At the moment I'm soring out motor controllers and connecting my Xbox controller</h2>
+<h2> At the moment I'm sorting out motor controllers and connecting my Xbox controller</h2>
 <br>
 <h1>How I'm doing it</h1>
 <h2>I'm using a libary called bluepad32 this allows me to connect a controller (i.e. xbox or playstation or a long list of others) and use that to set variables and control motors</h2>
-<h2>along with this I'm going to make the entire thing opensource from code to desighn files</h2>
+<h2>Along with this I'm going to make the entire thing opensource from code to design files</h2>
 <br>
 <h1>Links and sources</h1>
 <h2><a href="https://github.com/Deeppy1/Drone/tree/main">The GitHub prodgect</a></h2>
