added findings .html

--- a/index.html
+++ b/index.html
@@ -35,9 +35,15 @@ body {
 <h2>I'm currently attempting to create and 3d print a drone using an Esp32 and some old motors I had lying around </h2>
 <h2> At the moment I'm sorting out motor controllers and connecting my Xbox controller</h2>
 <br>
+<h1>How its going (Timeline)</h1>
+<h2>27/1/25 Project Epoch</h2>
+<h3>Day of Prodgect Creation</h3>
+<h2>30/1/25 Found A Critical Bug And Fixing It</h2>
+<h3>I found out why motors were always sert to high even when set to "0" (See <a href="findings.html">Findings</a> Page for more info)</h3>
+<br>
 <h1>How I'm doing it</h1>
 <h2>I'm using a libary called bluepad32 this allows me to connect a controller (i.e. xbox or playstation or a long list of others) and use that to set variables and control motors</h2>
-<h2>Along with this I'm going to make the entire thing opensource from code to design files</h2>
+<h2>Along with this I'm going to make the entire project opensource from code to design files</h2>
 <br>
 <h1>Links and sources</h1>
 <h2><a href="https://github.com/Deeppy1/Drone/tree/main">The GitHub prodgect</a></h2>
