added more hyperlinks

--- a/findings.html
+++ b/findings.html
@@ -36,6 +36,7 @@ body {
 <h2></h2>
 
 <h1>Links and sources</h1>
+<h2><a href="index.html">Main Page</a> </h2>
 <h2><a href="https://github.com/Deeppy1/Drone/tree/main">The GitHub prodgect</a></h2>
 <h2><a href="https://github.com/ricardoquesada/bluepad32">The Bluepad32 libary</a></h2>
 
