--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ body {
 <h2>Along with this I'm going to make the entire project opensource from code to design files</h2>
 <br>
 <h1>Links and sources</h1>
+<h2><a href="findings.html">Findings/Bugs Page</a> </h2>
 <h2><a href="https://github.com/Deeppy1/Drone/tree/main">The GitHub prodgect</a></h2>
 <h2><a href="https://github.com/ricardoquesada/bluepad32">The Bluepad32 libary</a></h2>
 
