--- a/findings.html
+++ b/findings.html
@@ -12,6 +12,10 @@ h1 {
 h2 {
   font-size: 20px;
 }
+
+h3 {
+  font-size: 15px;
+}
 /* Default (light mode) */
 body {
     background-color: white;
