--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body {
 <h2>27/1/25 Project Epoch</h2>
 <h3>Day of Prodgect Creation</h3>
 <h2>30/1/25 Found A Critical Bug And Fixing It</h2>
-<h3>I found out why motors were always sert to high even when set to "0" (See <a href="findings.html">Findings</a> Page for more info)</h3>
+<h3>I found out why motors were always sert to "HIGH" even when set to "0" (See <a href="findings.html">Findings</a> Page for more info)</h3>
 <br>
 <h1>How I'm doing it</h1>
 <h2>I'm using a libary called bluepad32 this allows me to connect a controller (i.e. xbox or playstation or a long list of others) and use that to set variables and control motors</h2>
